--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cnb_unselectedColor="#666666">
 
-    <item android:id="@+id/navigationExplore"
+    <item android:id="@+id/explore"
         android:icon="@drawable/ic_explore"
         android:title="@string/explore_title"/>
 
-    <item android:id="@+id/navigationDashboard"
+    <item android:id="@+id/dashboard"
         android:icon="@drawable/ic_dashboard"
         android:title="@string/dashboard_title"/>
 
-    <item android:id="@+id/navigationProfile"
+    <item android:id="@+id/notifications"
+        android:icon="@drawable/ic_notifications"
+        android:title="@string/notifications_title"/>
+
+    <item android:id="@+id/profile"
         android:icon="@drawable/ic_profile"
         android:title="@string/profile_title"/>
 
