--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,9 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorDivider">#BDBDBD</color>
+    //Bottom
+    <color name="ic_explore">#53F253</color>
+    <color name="ic_dashboard">#F99000</color>
+    <color name="ic_notifications">#425DF3</color>
+    <color name="navigationProfile">#BE14B6</color>
 </resources>
