--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -5,18 +5,22 @@
 
     <item android:id="@+id/explore"
         android:icon="@drawable/ic_explore"
-        android:title="@string/explore_title"/>
+        android:title="@string/explore_title"
+        app:cnb_iconColor="@color/explore"/>
 
     <item android:id="@+id/dashboard"
         android:icon="@drawable/ic_dashboard"
-        android:title="@string/dashboard_title"/>
+        android:title="@string/dashboard_title"
+        app:cnb_iconColor="@color/dashboard"/>
 
     <item android:id="@+id/notifications"
         android:icon="@drawable/ic_notifications"
-        android:title="@string/notifications_title"/>
+        android:title="@string/notifications_title"
+        app:cnb_iconColor="@color/notifications"/>
 
     <item android:id="@+id/profile"
         android:icon="@drawable/ic_profile"
-        android:title="@string/profile_title"/>
+        android:title="@string/profile_title"
+        app:cnb_iconColor="@color/Profile"/>
 
 </menu>
