--- a/app/src/main/res/layout/activity_home_profile.xml
+++ b/app/src/main/res/layout/activity_home_profile.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/ProviderTextView"
+            android:id="@+id/providerTextView"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="Пользователь" />
@@ -43,7 +43,7 @@
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/signUpButton"
+                android:id="@+id/logOutButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
