--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,13 +6,13 @@
             app:startDestination="@id/listNewsFragment">
 
     <fragment android:id="@+id/listNewsFragment"
-              android:name="ru.nowandroid.youtube.nowjsoupandroid.list.ListNewsFragment"
+              android:name="ru.nowandroid.youtube.rostselmash.list.ListNewsFragment"
               android:label="Новости Ростсельмаш" tools:layout="@layout/list_news_fragment">
         <action android:id="@+id/action_listNewsFragment_to_detailsNewsFragment"
                 app:destination="@id/detailsNewsFragment"/>
     </fragment>
     <fragment android:id="@+id/detailsNewsFragment"
-              android:name="ru.nowandroid.youtube.nowjsoupandroid.details.DetailsNewsFragment"
+              android:name="ru.nowandroid.youtube.rostselmash.details.DetailsNewsFragment"
               android:label="Подробно" tools:layout="@layout/details_news_fragment">
         <argument
                 android:name="link"
