--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -9,11 +9,11 @@
         <item
             android:id="@+id/nav_messages"
             android:icon="@drawable/ic_message"
-            android:title="Уведомления"/>
+            android:title="Новости"/>
         <item
             android:id="@+id/nav_friends"
             android:icon="@drawable/ic_account"
-            android:title="Контакты"/>
+            android:title="График"/>
     </group>
 
 
