--- a/app/src/main/res/layout/activity_pie_chart.xml
+++ b/app/src/main/res/layout/activity_pie_chart.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PieChartActivity">
+    tools:context=".charts.PieChartActivity">
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/pieChart"
