--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,10 @@
     <color name="colorPrimary">#FF0000</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorDivider">#BDBDBD</color>
-
+    // Свои цвета
+    <color name="colorDivider">#03A9F4</color>
+    <color name="colorRed">#DD2020</color>
+    <color name="colorOrange">#FF700A</color>
+    <color name="colorYellow">#FFB906</color>
+    <color name="colorGreen">#AEFF18</color>
 </resources>
