--- a/app/src/main/res/layout/activity_pie_chart.xml
+++ b/app/src/main/res/layout/activity_pie_chart.xml
@@ -7,6 +7,18 @@
     android:layout_height="match_parent"
     tools:context=".charts.PieChartActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Процентный объём производства по основным моделям в 2019"
+        android:textSize="18dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/pieChart"
         android:layout_width="match_parent"
