--- a/app/src/main/res/layout/activity_radar_chart.xml
+++ b/app/src/main/res/layout/activity_radar_chart.xml
@@ -7,6 +7,18 @@
     android:layout_height="match_parent"
     tools:context=".charts.RadarChartActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Доходы предприятия в 2019 (млн.р/мес)"
+        android:textSize="18dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/lineChart"
         android:layout_width="match_parent"
