--- a/app/src/main/res/layout/activity_home_profile.xml
+++ b/app/src/main/res/layout/activity_home_profile.xml
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Настройки" />
+                android:text="Уведомление" />
 
             <Space
                 android:layout_width="wrap_content"
@@ -79,10 +79,5 @@
                 android:layout_weight="1" />
 
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"></LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
