--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -19,14 +19,14 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Type Auth"
+        android:text="ООО «КЗ Ростсельмаш»"
         android:textColor="#FFFFFF"
         android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Email"
+        android:text="Навигационное меню"
         android:textColor="#FFFFFF" />
 
 </LinearLayout>
