--- a/app/src/main/res/layout/activity_finger.xml
+++ b/app/src/main/res/layout/activity_finger.xml
@@ -27,8 +27,8 @@
             android:src="@drawable/ic_fingerprint" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="219dp"
+            android:layout_height="77dp"
             android:layout_gravity="center"
             android:fontFamily="monospace"
             android:text="@string/login_biometric"
@@ -61,5 +61,21 @@
 
 
     </LinearLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/unlogin"
+        android:layout_width="89dp"
+        android:layout_height="44dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/roundcorner_bg"
+        android:elevation="5dp"
+        android:fontFamily="monospace"
+        android:padding="5dp"
+        android:text="@string/rebConfig"
+        android:textColor="@android:color/holo_blue_dark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
