--- a/app/src/main/res/layout/activity_home_profile.xml
+++ b/app/src/main/res/layout/activity_home_profile.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeProfileActivity">
+    tools:context=".profiles.HomeProfileActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -46,7 +46,7 @@
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/showPanel"
                 android:layout_width="218dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -102,7 +102,7 @@
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/onFingerBtn"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -114,7 +114,7 @@
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/button7"
+                android:id="@+id/offFingerBtn"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -150,5 +150,17 @@
                 android:textSize="20dp" />
 
         </LinearLayout>
+
+        <Button
+            android:id="@+id/adminOutBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Выход администратора" />
+
+        <Button
+            android:id="@+id/adminRights"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Настройки доступа" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
